fix 8-4 reward system, update describe and readme

--- a/Mario_PPO_RND.ipynb
+++ b/Mario_PPO_RND.ipynb
@@ -148,36 +148,38 @@
    "source": [
     "# Define environment\n",
     "## Create a custom environment, We need:\n",
-    "- SkipFrame: because the episode is very long then in this environment, we only need to repeat action sometimes. Then we repeat each action 4 times and skip 3 first frames (return 4th frame). We need to sum 4 rewards from 4 frames.\n",
-    "- GrayScaleResizeObservation: grayscale state (from RGB to gray image) and resize to 84x84.\n",
-    "- NoopResetEnv: when resetting the environment, I do random actions sometimes before using the evironment. This same as atari strategy. When reset, we choice num_noops random actions by random from 0 to noop_max and random do num_noops actions. If random actions yield to a terminal state, then reset and continue do random action. I set noop_max as 30 same as atari.\n",
+    "- SkipFrame: Because the episode is very long, we only need to repeat actions sometimes in this environment. We repeat each action 4 times and skip the first 3 frames (returning the 4th frame). We also sum the rewards from all 4 frames.\n",
+    "- GrayScaleResizeObservation: Convert the state to grayscale (from RGB to a gray image) and resize it to 84x84 pixels.\n",
+    "- NoopResetEnv: When resetting the environment, we perform random actions before starting the environment. This is similar to the Atari strategy. When resetting, we randomly choose num_noops actions between 0 and noop_max and perform num_noops random actions. If the random actions lead to a terminal state, we reset and continue performing random actions. I set noop_max to 30, similar to Atari.\n",
     "- CustomRewardAndDoneEnv\n",
-    "    - I see that a lot of people train Mario to use this custom reward, and then I copy it. Just add 50 rewards if the agent solves the stage and add -50 rewards if the agent is dead. And the reward is divided into 10. I set done to True if Mario dies instead of when Mario lost all lives as default.\n",
-    "    - stage 4-2: give a -50 reward when Mario moves on top of the map (y_pos >= 255).\n",
-    "    - stages 4-4 and 7-4: set done = True when Mario goes to wrong way and gives a -50 penalty reward. If Mario goes to the true way but the map still loops (this is a bug), I set done = True but don't give a penalty reward.\n",
-    "    - stage 8-4: set done = True when Mario goes to wrong way and gives a -50 penalty reward (like 4-4 and 7-4), but this map have 1 hardest part that Mario need to find hidden brick. I set penalty reward as -100 for this part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500).\n",
-    "    - stages 4-4 and 8-4: give a -0.1 reward every step.\n",
+    "    - I noticed that many people train Mario using this custom reward system, so I copied it. The system adds 50 reward points if the agent solves the stage and subtracts 50 reward points if the agent dies. The reward is divided by 10. I set done to True if Mario dies, instead of the default setting where Mario loses all lives.\n",
+    "    - Stage 4-2: Subtract 50 reward points if Mario moves on top of the map (y_pos >= 255).\n",
+    "    - Stages 4-4 and 7-4: Set done = True when Mario goes the wrong way and subtract 50 reward points as a penalty. If Mario takes the correct path but the map still loops (a known bug), I set done = True but do not apply a penalty.\n",
+    "    - Stage 8-4: Set done = True when Mario goes the wrong way and subtract 50 reward points as a penalty (similar to stages 4-4 and 7-4). This map has a particularly difficult section where Mario needs to find a hidden brick. I apply a -100 penalty in this part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500).\n",
+    "    - Stage 8-4: Add 100 reward points when Mario successfully takes the correct path.\n",
+    "    - Stages 4-4 and 8-4: give a -0.1 reward every step.\n",
     "\n",
     "\n",
     "## About reward system:\n",
-    "- set done to True when Mario dies: This is the most important thing because, in the default reward system, Mario still yields a reward by just moving right, if Mario dies, the agent can't lose total rewards and the agent still go right (in new life) and get more rewards. This is the easiest way to get rewards and the agent also learns this trick.\n",
-    "- penalty -50 reward when Mario dies: this is necessary to make Mario train faster. If we don't add a penalty, the agent can't complete hard stages.\n",
-    "reward 50 when reaching the flag: this makes Mario train faster and surpass stuck points in hard stages.\n",
-    "- change penalty and reaching flag reward of more or less than 50 don't make more difference then I don't change it.\n",
-    "- Divide rewards by 10: I think it makes total rewards smaller and the agent can learn a better way, but I am not sure how it is necessary. I just copy it.\n",
-    "- With Stage 4-2: I see that the agent can reach more rewards when Mario goes to the wrap zone, but Mario can't win this stage with the wrap zone way because the reward system gives negative rewards when Mario goes left. Then I just give a penalty reward when Mario moves to the top of the map.\n",
-    "- Use FrameStack to stack lastest 4 frames as observation\n",
-    "- with stage 4-4 and 7-4:\n",
-    "    - because this map has the wrong way, Mario will go to the loop and the reward still increase to infinity, then I need to set done = True and give a negative penalty reward\n",
-    "    - negative reward to prevent Mario go to the wrong way.\n",
-    "    - Another strategy is to give a negative reward but don't set done = True (like 4-2). But this map has a bug and this strangtegy not working.\n",
-    "    - even though Mario goes in the correct way, sometimes Mario still goes in the loop. Then I set done = True every time Mario goes on the loop (check by x_pos and max_x_pos).\n",
-    "- stage 4-4: give a -0.1 reward every step: prevent Mario stuck. This map have 1 part that Mario need to move left, but move left give negative reward in default system. Go right make Mario go to wrong way, than the episode ended and Mario get negative reward. Than Mario often stop moving to maintain rewards. To make Mario move, I need add negative reward every step.\n",
-    "- stage 8-4:\n",
-    "    - give a -0.1 reward every step: prevent Mario from getting stuck. This makes Mario move when they are stuck at part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500). Because if Mario can't move right (go the wrong way and get negative reward), Agent often learn that they can't do anything to get more reward. Then agent often stop moving. This penalty reward makes agent still explore to find hidden brick.\n",
-    "    - same as 4-4 and 7-4, I set done = True and give -50 penalty reward when Agent move in wrong way. But at hardest part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500), I set penalty reward as -100.\n",
-    "    - Another strategy is giving +50 reward when agent find hidden brick or agent go in true way (don't go the wrong way). I tried and all 3 ways work.\n",
-    "    - Because the map has many locations with overlapping x_pos (especially the underwater part where x_pos is marked again from 1). You must be careful if changing the custom reward system."
+    "- Set done to True when Mario dies: This is the most important aspect because, in the default reward system, Mario still gains a reward by just moving right. If Mario dies, the agent doesn't lose total rewards and can continue moving right (in the new life) to get more rewards. This is the easiest way for the agent to earn rewards, and it can learn to exploit this trick.\n",
+    "- Penalty of -50 reward when Mario dies: This is necessary to speed up Mario's training. Without this penalty, the agent may struggle to complete more difficult stages.\n",
+    "- Reward of 50 when reaching the flag: This encourages Mario to train faster and overcome difficult sections in harder stages.\n",
+    "- Changing the penalty and flag reward to more or less than 50 doesn't make a significant difference, so I haven't changed it.\n",
+    "- Divide rewards by 10: I believe this reduces the total rewards and helps the agent learn a better strategy, but I'm not entirely sure how necessary this is. I simply followed an existing approach.\n",
+    "- With Stage 4-2: I noticed that the agent can earn more rewards when Mario goes to the warp zone, but Mario can't win this stage using the warp zone because the reward system gives negative rewards when Mario moves left. Therefore, I added a penalty when Mario moves to the top of the map.\n",
+    "- Use FrameStack to stack the latest 4 frames as observation.\n",
+    "- With Stage 4-4 and 7-4:\n",
+    "    - Since this map has a wrong path, Mario can enter a loop where the reward increases indefinitely. To prevent this, I set done = True and assign a negative penalty reward.\n",
+    "    - I also give a negative reward to prevent Mario from taking the wrong path.\n",
+    "    - Another strategy is to give a negative reward without setting done = True (as in 4-2). However, this strategy doesn't work due to a bug in this map.\n",
+    "    - Even when Mario is on the correct path, sometimes he still enters the loop. To handle this, I set done = True every time Mario enters the loop (checked by x_pos and max_x_pos).\n",
+    "- Stage 4-4: Assign a -0.1 reward for every step: This prevents Mario from getting stuck. This map has a section where Mario needs to move left, but moving left incurs a negative reward in the default system. If Mario moves right, he takes the wrong path, causing the episode to end with a negative reward. To keep Mario moving, I added a negative reward for every step.\n",
+    "- Stage 8-4:\n",
+    "    - Assign a -0.1 reward for every step: This prevents Mario from getting stuck. This encourages Mario to move when stuck at a particular section (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500). Since moving right can lead Mario down the wrong path, the agent often learns to do nothing to avoid losing rewards. This penalty encourages exploration to find the hidden brick.\n",
+    "    - Sams as in 4-4 and 7-4, I set done = True and assign a -50 penalty when the agent moves in the wrong direction. At the hardest part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500), I increased the penalty to -100.\n",
+    "    - Add a 50 reward when the agent goes the correct way (avoiding the wrong path).\n",
+    "    - Another strategy is giving a +50 reward when the agent finds the hidden brick. I've tried both methods, and they both work.\n",
+    "    - Since this map has many locations with overlapping x_pos values (especially in the underwater section where x_pos is reset to 1), be careful when modifying the custom reward system."
    ]
   },
   {
@@ -280,7 +282,7 @@
     "\n",
     "    def step(self, action):\n",
     "        state, reward, done, trunc, info = self.env.step(action)\n",
-    "        \n",
+    "\n",
     "        if (info['x_pos'] - self.current_x) == 0:\n",
     "            self.current_x_count += 1\n",
     "        else:\n",
@@ -323,16 +325,16 @@
     "            if info[\"x_pos\"] >= 3675 and info[\"x_pos\"] <= 3700:\n",
     "                done = True\n",
     "                reward -= 50\n",
-    "                \n",
+    "\n",
     "            if info[\"x_pos\"] < self.max_x - 200:\n",
     "                if self.max_x >= 1250 and self.max_x <= 1310: #solved bug because x_pos duplicated\n",
     "                    if info[\"x_pos\"] >= 320:\n",
     "                        done = True\n",
     "                        reward = -50\n",
-    "                elif info[\"x_pos\"] == 312:\n",
+    "                elif info[\"x_pos\"] >= 312-5 and info[\"x_pos\"] <= 312+5:\n",
     "                    done = True\n",
     "                    reward = -50\n",
-    "                elif info[\"x_pos\"] == 56 and self.max_x > 3650 and self.sea_map == False:\n",
+    "                elif info[\"x_pos\"] >= 56-5 and info[\"x_pos\"] <= 56-5 and self.max_x > 3650 and self.sea_map == False:\n",
     "                    reward += 50\n",
     "                    self.sea_map = True\n",
     "            if info[\"x_pos\"] > self.max_x + 100:\n",
