fix custom reward + fix model layer name

--- a/Mario_PPO_RND.ipynb
+++ b/Mario_PPO_RND.ipynb
@@ -264,6 +264,7 @@
     "        super(CustomRewardAndDoneEnv, self).__init__(env)\n",
     "        self.current_score = 0\n",
     "        self.current_x = 0\n",
+    "        self.old_x = -1\n",
     "        self.current_x_count = 0\n",
     "        self.max_x = 0\n",
     "        self.world = world\n",
@@ -274,6 +275,7 @@
     "    def reset(self, **kwargs):\n",
     "        self.current_score = 0\n",
     "        self.current_x = 0\n",
+    "        self.old_x = -1\n",
     "        self.current_x_count = 0\n",
     "        self.max_x = 0\n",
     "        if self.world == 8 and self.stage == 4:\n",
@@ -310,7 +312,7 @@
     "        if self.world == 4 and self.stage == 4:\n",
     "            if (info[\"x_pos\"] <= 1500 and info[\"y_pos\"] < 127) or (\n",
     "                    1588 <= info[\"x_pos\"] < 2380 and info[\"y_pos\"] >= 127):\n",
-    "                reward = -50\n",
+    "                reward -= 50\n",
     "                done = True\n",
     "            if done == False and info[\"x_pos\"] < self.max_x - 100:\n",
     "                done = True\n",
@@ -327,14 +329,16 @@
     "                reward -= 50\n",
     "\n",
     "            if info[\"x_pos\"] < self.max_x - 200:\n",
-    "                if self.max_x >= 1250 and self.max_x <= 1310: #solved bug because x_pos duplicated\n",
+    "                if self.max_x >= 1240 and self.max_x <= 1310: #solved bug because x_pos duplicated\n",
     "                    if info[\"x_pos\"] >= 320:\n",
     "                        done = True\n",
-    "                        reward = -50\n",
-    "                elif info[\"x_pos\"] >= 312-5 and info[\"x_pos\"] <= 312+5:\n",
+    "                        reward -= 50\n",
+    "\n",
+    "            if info[\"x_pos\"] < self.old_x - 200:\n",
+    "                if info[\"x_pos\"] >= 312-5 and info[\"x_pos\"] <= 312+5:\n",
     "                    done = True\n",
-    "                    reward = -50\n",
-    "                elif info[\"x_pos\"] >= 56-5 and info[\"x_pos\"] <= 56-5 and self.max_x > 3650 and self.sea_map == False:\n",
+    "                    reward -= 50\n",
+    "                elif info[\"x_pos\"] >= 56-5 and info[\"x_pos\"] <= 56+5 and self.max_x > 3645 and self.sea_map == False:\n",
     "                    reward += 50\n",
     "                    self.sea_map = True\n",
     "            if info[\"x_pos\"] > self.max_x + 100:\n",
@@ -343,6 +347,7 @@
     "                reward -= 0.1\n",
     "        self.max_x = max(self.max_x, self.current_x)\n",
     "        self.current_score = info[\"score\"]\n",
+    "        self.old_x = self.current_x\n",
     "\n",
     "        return state, reward / 10., done, trunc, info"
    ]
@@ -1017,8 +1022,8 @@
     "        self.conv3 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
     "        self.conv4 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
     "        self.linear = nn.Linear(1152, 512)\n",
-    "        self.int_critic = nn.Linear(512, 1)\n",
-    "        self.ext_critic = nn.Linear(512, 1)\n",
+    "        self.in_critic = nn.Linear(512, 1)\n",
+    "        self.ex_critic = nn.Linear(512, 1)\n",
     "        self.actor_linear = nn.Linear(512, output_dim)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -1028,7 +1033,7 @@
     "        x = F.relu(self.conv4(x))\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.linear(x)\n",
-    "        return self.actor_linear(x), self.ext_critic(x), self.int_critic(x)\n",
+    "        return self.actor_linear(x), self.ex_critic(x), self.in_critic(x)\n",
     "\n",
     "class Feature_Model(nn.Module):\n",
     "    def __init__(self, input_dim, output_dim):\n",
