update custom reward, add init weight option

--- a/Mario_PPO_RND.ipynb
+++ b/Mario_PPO_RND.ipynb
@@ -131,11 +131,13 @@
     "    'stage': 4,\n",
     "    'action_type': 'complex',\n",
     "    'is_normalize_advantage': False,\n",
-    "    'V_loss_type': \"mse\", #\"huber\"\n",
+    "    'V_loss_type': \"huber\", #\"mse\"\n",
     "    'target_kl': 0.05,\n",
     "    'gae_lambda': 0.95,\n",
     "    'int_adv_coef': 1,\n",
-    "    'ext_adv_coef': 2\n",
+    "    'ext_adv_coef': 2,\n",
+    "    'use_layer_init': True,\n",
+    "    'additional_bonus_state_8_4_option': \"no\" #\"right_pipe\"\n",
     "}\n",
     "\n",
     "config = DictWrapper(config)"
@@ -156,7 +158,7 @@
     "    - Stage 4-2: Subtract 50 reward points if Mario moves on top of the map (y_pos >= 255).\n",
     "    - Stages 4-4 and 7-4: Set done = True when Mario goes the wrong way and subtract 50 reward points as a penalty. If Mario takes the correct path but the map still loops (a known bug), I set done = True but do not apply a penalty.\n",
     "    - Stage 8-4: Set done = True when Mario goes the wrong way and subtract 50 reward points as a penalty (similar to stages 4-4 and 7-4). This map has a particularly difficult section where Mario needs to find a hidden brick. I apply a -100 penalty in this part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500).\n",
-    "    - Stage 8-4: Add 100 reward points when Mario successfully takes the correct path.\n",
+    "    - Stage 8-4: if config.additional_bonus_state_8_4_option = 'right_pipe', Add 50 reward points when Mario successfully takes the correct path.\n",
     "    - Stages 4-4 and 8-4: give a -0.1 reward every step.\n",
     "\n",
     "\n",
@@ -177,7 +179,7 @@
     "- Stage 8-4:\n",
     "    - Assign a -0.1 reward for every step: This prevents Mario from getting stuck. This encourages Mario to move when stuck at a particular section (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500). Since moving right can lead Mario down the wrong path, the agent often learns to do nothing to avoid losing rewards. This penalty encourages exploration to find the hidden brick.\n",
     "    - Sams as in 4-4 and 7-4, I set done = True and assign a -50 penalty when the agent moves in the wrong direction. At the hardest part (info[\"x_pos\"] > 2440 and info[\"x_pos\"] <= 2500), I increased the penalty to -100.\n",
-    "    - Add a 50 reward when the agent goes the correct way (avoiding the wrong path).\n",
+    "    - If config.additional_bonus_state_8_4_option = 'right_pipe', Add a 50 reward when the agent goes the correct way (avoiding the wrong path).\n",
     "    - Another strategy is giving a +50 reward when the agent finds the hidden brick. I've tried both methods, and they both work.\n",
     "    - Since this map has many locations with overlapping x_pos values (especially in the underwater section where x_pos is reset to 1), be careful when modifying the custom reward system."
    ]
@@ -260,7 +262,7 @@
     "        return obs, reward, done, trunk, info\n",
     "\n",
     "class CustomRewardAndDoneEnv(gym.Wrapper):\n",
-    "    def __init__(self, env=None, world=1, stage=1):\n",
+    "    def __init__(self, env=None, world=1, stage=1, additional_bonus_state_8_4_option = \"no\"):\n",
     "        super(CustomRewardAndDoneEnv, self).__init__(env)\n",
     "        self.current_score = 0\n",
     "        self.current_x = 0\n",
@@ -271,6 +273,7 @@
     "        self.stage = stage\n",
     "        if self.world == 8 and self.stage == 4:\n",
     "            self.sea_map = False\n",
+    "            self.additional_bonus_state_8_4_option = additional_bonus_state_8_4_option\n",
     "\n",
     "    def reset(self, **kwargs):\n",
     "        self.current_score = 0\n",
@@ -339,10 +342,12 @@
     "                    done = True\n",
     "                    reward -= 50\n",
     "                elif info[\"x_pos\"] >= 56-5 and info[\"x_pos\"] <= 56+5 and self.max_x > 3645 and self.sea_map == False:\n",
-    "                    reward += 50\n",
+    "                    if self.additional_bonus_state_8_4_option == 'right_pipe':\n",
+    "                        reward += 50\n",
     "                    self.sea_map = True\n",
-    "            if info[\"x_pos\"] > self.max_x + 100:\n",
-    "                reward += 50\n",
+    "            if self.additional_bonus_state_8_4_option == 'right_pipe':\n",
+    "                if info[\"x_pos\"] > self.max_x + 100:\n",
+    "                    reward += 50\n",
     "            if done == False:\n",
     "                reward -= 0.1\n",
     "        self.max_x = max(self.max_x, self.current_x)\n",
@@ -373,7 +378,7 @@
    "outputs": [],
    "source": [
     "#modify from https://github.com/uvipen/Super-mario-bros-PPO-pytorch/blob/master/src/env.py\n",
-    "def create_env(world, stage, action_type, test=False):\n",
+    "def create_env(world, stage, action_type, additional_bonus_state_8_4_option, test=False):\n",
     "    if gym.__version__ < '0.26':\n",
     "        env = gym_super_mario_bros.make(f\"SuperMarioBros-{world}-{stage}-v0\", new_step_api=True)\n",
     "    else:\n",
@@ -391,7 +396,7 @@
     "    if test == False:\n",
     "        env = NoopResetEnv(env)\n",
     "    env = SkipFrame(env, skip=4)\n",
-    "    env = CustomRewardAndDoneEnv(env, world, stage)\n",
+    "    env = CustomRewardAndDoneEnv(env, world, stage, additional_bonus_state_8_4_option)\n",
     "    env = GrayScaleResizeObservation(env, shape=84)\n",
     "    if gym.__version__ < '0.26':\n",
     "        env = FrameStack(env, num_stack=4, new_step_api=True)\n",
@@ -400,9 +405,9 @@
     "    return env\n",
     "\n",
     "class MultipleEnvironments:\n",
-    "    def __init__(self, world, stage, action_type, num_envs):\n",
+    "    def __init__(self, world, stage, action_type, num_envs, additional_bonus_state_8_4_option):\n",
     "        self.agent_conns, self.env_conns = zip(*[mp.Pipe(duplex=True) for _ in range(num_envs)])\n",
-    "        self.envs = [create_env(world, stage, action_type) for _ in range(num_envs)]\n",
+    "        self.envs = [create_env(world, stage, action_type, additional_bonus_state_8_4_option) for _ in range(num_envs)]\n",
     "\n",
     "        for index in range(num_envs):\n",
     "            process = mp.Process(target=self.run, args=(index,))\n",
@@ -608,7 +613,7 @@
     "                 save_figure_step, learn_step, total_step_or_episode, total_step, total_episode, model,\n",
     "                 target_model, predict_model, gamma, gamma_int, learning_rate, entropy_coef, V_coef, max_grad_norm,\n",
     "                 clip_param, batch_size, num_epoch, is_normalize_advantage, V_loss_type, target_kl, gae_lambda, int_adv_coef,\n",
-    "                 ext_adv_coef, device):\n",
+    "                 ext_adv_coef, additional_bonus_state_8_4_option, device):\n",
     "        self.world = world\n",
     "        self.stage = stage\n",
     "        self.action_type = action_type\n",
@@ -659,6 +664,7 @@
     "        self.gae_lambda = gae_lambda\n",
     "        self.int_adv_coef = int_adv_coef\n",
     "        self.ext_adv_coef = ext_adv_coef\n",
+    "        self.additional_bonus_state_8_4_option = additional_bonus_state_8_4_option\n",
     "\n",
     "        # I just log 1000 lastest update and print it to log.\n",
     "        self.V_loss = np.zeros((1000,)).reshape(-1)\n",
@@ -676,7 +682,7 @@
     "        # test current model and save model/figure if model yield best total rewards.\n",
     "        # create env for testing, reset test env\n",
     "        if self.env is None:\n",
-    "            self.env = create_env(self.world, self.stage, self.action_type, True)\n",
+    "            self.env = create_env(self.world, self.stage, self.action_type, self.additional_bonus_state_8_4_option, True)\n",
     "        state = self.env.reset()\n",
     "        done = False\n",
     "\n",
@@ -1008,6 +1014,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f71586e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy from https://github.com/vwxyzjn/cleanrl/blob/master/cleanrl/ppo_rnd_envpool.py\n",
+    "# ALGO LOGIC: initialize agent here:\n",
+    "def layer_init(layer, std=np.sqrt(2), bias_const=0.0):\n",
+    "    torch.nn.init.orthogonal_(layer.weight, std)\n",
+    "    torch.nn.init.constant_(layer.bias, bias_const)\n",
+    "    return layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dee1e253-b83d-48d5-aa9c-4463303c3feb",
    "metadata": {
     "id": "dee1e253-b83d-48d5-aa9c-4463303c3feb"
@@ -1015,16 +1036,16 @@
    "outputs": [],
    "source": [
     "class Model(nn.Module):\n",
-    "    def __init__(self, input_dim, output_dim):\n",
+    "    def __init__(self, input_dim, output_dim, use_layer_init):\n",
     "        super(Model, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(input_dim[0], 32, 3, stride=2, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.conv3 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.conv4 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.linear = nn.Linear(1152, 512)\n",
-    "        self.in_critic = nn.Linear(512, 1)\n",
-    "        self.ex_critic = nn.Linear(512, 1)\n",
-    "        self.actor_linear = nn.Linear(512, output_dim)\n",
+    "        self.conv1 = layer_init(nn.Conv2d(input_dim[0], 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(input_dim[0], 32, 3, stride=2, padding=1)\n",
+    "        self.conv2 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.conv3 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.conv4 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.linear = layer_init(nn.Linear(1152, 512)) if use_layer_init else nn.Linear(1152, 512)\n",
+    "        self.in_critic = layer_init(nn.Linear(512, 1)) if use_layer_init else nn.Linear(512, 1)\n",
+    "        self.ex_critic = layer_init(nn.Linear(512, 1)) if use_layer_init else nn.Linear(512, 1)\n",
+    "        self.actor_linear = layer_init(nn.Linear(512, output_dim)) if use_layer_init else nn.Linear(512, output_dim)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.conv1(x/255.))\n",
@@ -1036,14 +1057,14 @@
     "        return self.actor_linear(x), self.ex_critic(x), self.in_critic(x)\n",
     "\n",
     "class Feature_Model(nn.Module):\n",
-    "    def __init__(self, input_dim, output_dim):\n",
+    "    def __init__(self, input_dim, output_dim, use_layer_init):\n",
     "        super(Feature_Model, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 32, 3, stride=2, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.conv3 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.conv4 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.linear1 = nn.Linear(1152, 512)\n",
-    "        self.linear2 = nn.Linear(512, 512)\n",
+    "        self.conv1 = layer_init(nn.Conv2d(1, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(1, 32, 3, stride=2, padding=1)\n",
+    "        self.conv2 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.conv3 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1) \n",
+    "        self.conv4 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.linear1 = layer_init(nn.Linear(1152, 512)) if use_layer_init else nn.Linear(1152, 512)\n",
+    "        self.linear2 = layer_init(nn.Linear(512, 512)) if use_layer_init else nn.Linear(512, 512)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.conv1(x))\n",
@@ -1056,13 +1077,13 @@
     "        return x\n",
     "\n",
     "class Target_Model(nn.Module):\n",
-    "    def __init__(self, input_dim, output_dim):\n",
+    "    def __init__(self, input_dim, output_dim, use_layer_init):\n",
     "        super(Target_Model, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 32, 3, stride=2, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.conv3 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.conv4 = nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
-    "        self.linear = nn.Linear(1152, 512)\n",
+    "        self.conv1 = layer_init(nn.Conv2d(1, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(1, 32, 3, stride=2, padding=1)\n",
+    "        self.conv2 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.conv3 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.conv4 = layer_init(nn.Conv2d(32, 32, 3, stride=2, padding=1)) if use_layer_init else nn.Conv2d(32, 32, 3, stride=2, padding=1)\n",
+    "        self.linear = layer_init(nn.Linear(1152, 512)) if use_layer_init else nn.Linear(1152, 512)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.conv1(x))\n",
@@ -1089,9 +1110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model(config.state_dim, config.action_dim)\n",
-    "target_model = Target_Model(config.state_dim, config.action_dim)\n",
-    "predict_model = Feature_Model(config.state_dim, config.action_dim)"
+    "model = Model(config.state_dim, config.action_dim, config.use_layer_init)\n",
+    "target_model = Target_Model(config.state_dim, config.action_dim, config.use_layer_init)\n",
+    "predict_model = Feature_Model(config.state_dim, config.action_dim, config.use_layer_init)"
    ]
   },
   {
@@ -1103,7 +1124,7 @@
    },
    "outputs": [],
    "source": [
-    "envs = MultipleEnvironments(config.world, config.stage, config.action_type, config.num_envs)"
+    "envs = MultipleEnvironments(config.world, config.stage, config.action_type, config.num_envs, config.additional_bonus_state_8_4_option)"
    ]
   },
   {
